Fixed navigation for mobile

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </div>
         </nav>
 
-        <!-- Pop Out Navigation -->
+        <!-- Mobile Navigation -->
         <header class="mobnav fixed z-50 block w-full lg:hidden">
             <div class="flex items-center justify-between p-4">
                 <div>
