Fixed about page

--- a/about.html
+++ b/about.html
@@ -78,7 +78,7 @@
         <!--About-->
         <div class="py-16 lg:py-32">
             <div class="mx-auto max-w-7xl px-4">
-                <div class="grid grid-cols-2 items-center gap-16">
+                <div class="grid grid-cols-1 md:grid-cols-2 items-center gap-16">
                     <div>
                         <h1 class="mb-4 text-4xl lg:text-6xl">Hey there! I am Milan</h1>
                         <p class="mb-4">A seasoned UI/UX Senior Designer, and I've been diving into the world of design for over 15 years. What keeps me going? The thrill of turning your ideas into something incredible. Your vision is my guide, and I work hard to make sure every detail meets your expectations.</p>
