--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
                         </div>
                     </div> -->
                 </div>
-                <a href="work" class="mt-12 inline-flex items-center justify-center rounded-full bg-primary px-8 py-4 uppercase tracking-widest text-dark hover:bg-green-400">See more projects</a>
+                <a href="work" class="mt-12 inline-flex items-center justify-center rounded-full bg-primary px-8 py-2 uppercase tracking-widest text-dark hover:bg-green-400">See more projects <i class="las la-arrow-right ml-2 text-3xl"></i></a>
             </div>
         </div>
 
