--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
                         <div class="flex space-x-4 text-white">
                             <a href="work" class="px-3 py-2 text-base font-light uppercase tracking-widest hover:text-primary">Work</a>
                             <a href="about" class="px-3 py-2 text-base font-light uppercase tracking-widest hover:text-primary">About</a>
-                            <a href="#services" class="px-3 py-2 text-base font-light uppercase tracking-widest hover:text-primary">Services</a>
+                            <a href="/#services" class="px-3 py-2 text-base font-light uppercase tracking-widest hover:text-primary">Services</a>
                             <a href="https://medium.com/@milanmdhr" target="_blank" class="px-3 py-2 text-base font-light uppercase tracking-widest hover:text-primary">Blog</a>
                             <a href="contact" class="px-3 py-2 text-base font-light uppercase tracking-widest hover:text-primary">Let's Talk</a>
                         </div>
