The Cliff Nepal Case Study

--- a/work.html
+++ b/work.html
@@ -106,7 +106,7 @@
                             </div>
                             <img src="assets/images/cliff-showcase.jpg" alt="" class="translate-x-3 transform rounded-br-3xl rounded-tl-lg duration-300 ease-in-out group-hover:translate-x-0" />
                         </div>
-                        <a href="https://www.thecliffnepal.com/" target="_blank" class="absolute inset-0 z-10"><div class="sr-only">open case study</div></a>
+                        <a href="works/the-cliff-nepal" class="absolute inset-0 z-10"><div class="sr-only">open case study</div></a>
                         <div class="view-project absolute -right-8 bottom-12 z-20 animate-spin-slow transition-all duration-300 ease-in-out">
                             <img src="assets/images/view-project-white.svg" alt="" />
                         </div>
