--- a/works/amooma.html
+++ b/works/amooma.html
@@ -150,7 +150,7 @@
                 <h1 class="mb-4 text-4xl lg:text-6xl">Research & Discovery</h1>
                 <p class="text-gray mb-12">The Research & Discovery phase for the Amooma website redesign was crucial in understanding the needs and behaviors of the target audience, identifying pain points in the current site, and laying the groundwork for an effective redesign. This phase involved several key activities, including user research, competitor analysis, and data analysis, each contributing to a comprehensive understanding of the project requirements and opportunities for improvement.</p>
 
-                <div class="mb-10 grid grid-cols-1 justify-between gap-2 md:gap-8 md:grid-cols-12">
+                <div class="mb-10 grid grid-cols-1 justify-between gap-2 md:grid-cols-12 md:gap-8">
                     <div class="md:col-span-4">
                         <h3 class="mb-3 text-2xl lg:text-3xl">Understanding the Client and Market</h3>
                     </div>
@@ -159,7 +159,7 @@
                     </div>
                 </div>
 
-                <div class="mb-10 grid grid-cols-1 justify-between gap-2 md:gap-8 md:grid-cols-12">
+                <div class="mb-10 grid grid-cols-1 justify-between gap-2 md:grid-cols-12 md:gap-8">
                     <div class="md:col-span-4">
                         <h3 class="mb-3 text-2xl lg:text-3xl">Analyzing the Competition</h3>
                     </div>
@@ -168,7 +168,7 @@
                     </div>
                 </div>
 
-                <div class="mb-10 grid grid-cols-1 justify-between gap-2 md:gap-8 md:grid-cols-12">
+                <div class="mb-10 grid grid-cols-1 justify-between gap-2 md:grid-cols-12 md:gap-8">
                     <div class="md:col-span-4">
                         <h3 class="mb-3 text-2xl lg:text-3xl">Identifying Target Audience</h3>
                     </div>
@@ -177,7 +177,7 @@
                     </div>
                 </div>
 
-                <div class="mb-12 grid grid-cols-1 justify-between gap-2 md:gap-8 md:grid-cols-12">
+                <div class="mb-12 grid grid-cols-1 justify-between gap-2 md:grid-cols-12 md:gap-8">
                     <div class="md:col-span-4">
                         <h3 class="mb-3 text-2xl lg:text-3xl">Gathering User Insights</h3>
                     </div>
@@ -186,7 +186,7 @@
                     </div>
                 </div>
                 <h3 class="mb-8 text-2xl lg:text-3xl">Key Findings</h3>
-                <div class="mb-12 grid grid-cols-1 md:grid-cols-2 gap-8">
+                <div class="mb-12 grid grid-cols-1 gap-8 md:grid-cols-2">
                     <div class="rounded-xl bg-zinc-800 p-5 md:p-8">
                         <img src="../assets/images/icon-nav.svg" alt="" class="mb-4 w-10" />
                         <h3 class="mb-2 text-2xl lg:text-3xl">Navigation</h3>
@@ -213,12 +213,12 @@
                 </div>
 
                 <h3 class="mb-8 text-2xl lg:text-3xl">Personas</h3>
-                <div class="mb-12 grid grid-cols-1 md:grid-cols-2 gap-8">
+                <div class="mb-12 grid grid-cols-1 gap-8 md:grid-cols-2">
                     <div class="rounded-xl bg-zinc-800 p-5 md:p-8">
                         <div class="mb-4 flex items-center space-x-4">
-                            <img src="../assets/images/persona-01.png" alt="" class="mb-4 w-20 md:w-28 rounded-full" />
+                            <img src="../assets/images/persona-01.png" alt="" class="mb-4 w-20 rounded-full md:w-28" />
                             <div>
-                                <h3 class="mb-1 lg:mb-2 text-2xl lg:text-3xl">Sarah Wong, 35</h3>
+                                <h3 class="mb-1 text-2xl lg:mb-2 lg:text-3xl">Sarah Wong, 35</h3>
                                 <p class="text-gray">Marketing Manager</p>
                             </div>
                         </div>
@@ -230,9 +230,9 @@
 
                     <div class="rounded-xl bg-zinc-800 p-5 md:p-8">
                         <div class="mb-4 flex items-center space-x-4">
-                            <img src="../assets/images/persona-02.png" alt="" class="mb-4 w-20 md:w-28 rounded-full" />
+                            <img src="../assets/images/persona-02.png" alt="" class="mb-4 w-20 rounded-full md:w-28" />
                             <div>
-                                <h3 class="mb-1 lg:mb-2 text-2xl lg:text-3xl">Michael Lee, 42</h3>
+                                <h3 class="mb-1 text-2xl lg:mb-2 lg:text-3xl">Michael Lee, 42</h3>
                                 <p class="text-gray">Financial Analyst</p>
                             </div>
                         </div>
@@ -260,12 +260,12 @@
         <div class="py-16 lg:py-32">
             <div class="mx-auto max-w-7xl px-4">
                 <h1 class="mb-16 text-4xl lg:text-6xl">Global Design System</h1>
-                <div class="grid grid-cols-1 justify-between gap-16 md:grid-cols-2">
-                    <div class="md:col-span-1">
+                <div class="grid grid-cols-1 justify-between gap-16 md:grid-cols-12">
+                    <div class="md:col-span-8">
                         <h3 class="mb-3 text-2xl lg:text-3xl">Typography</h3>
                         <img src="../assets/images/amooma-typography.svg" alt="" class="w-full" />
                     </div>
-                    <div class="md:col-span-1">
+                    <div class="md:col-span-4">
                         <h3 class="mb-3 text-2xl lg:text-3xl">Color palette</h3>
                         <div class="mb-4 rounded bg-[#EEDBB1] p-5 text-xl tracking-widest text-dark">#EEDBB1</div>
                         <div class="mb-4 rounded bg-[#5B7F95] p-5 text-xl tracking-widest text-white">#5B7F95</div>
@@ -322,7 +322,7 @@
                 <p class="mb-4 uppercase tracking-widest">04. Conclusion</p>
                 <h1 class="mb-4 text-4xl lg:text-6xl">Key Learnings</h1>
                 <p class="text-gray mb-12">My journey through this project provided several key insights.</p>
-                <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
+                <div class="grid grid-cols-1 gap-8 md:grid-cols-2">
                     <div class="rounded-xl bg-zinc-800 p-5 md:p-8">
                         <img src="../assets/images/icon-check.svg" alt="" class="mb-4 w-10" />
                         <h3 class="mb-2 text-2xl lg:text-3xl">Understanding User Needs</h3>
@@ -357,22 +357,22 @@
         <div class="bg-primary">
             <div class="rounded-b-3xl bg-white py-16 lg:rounded-b-[80px] lg:py-32">
                 <div class="mx-auto max-w-7xl px-4">
-                    <h1 class="mb-8 text-4xl lg:text-6xl text-center md:text-left">More to explore</h1>
-                    <div class="grid grid-cols-1 md:grid-cols-2 gap-y-8 justify-between">
+                    <h1 class="mb-8 text-center text-4xl md:text-left lg:text-6xl">More to explore</h1>
+                    <div class="grid grid-cols-1 justify-between gap-y-8 md:grid-cols-2">
                         <div class="flex items-center gap-x-5 lg:gap-x-8">
-                            <a href="#"><img src="../assets/images/cliff-showcase.jpg" alt="" class="h-32 rounded-md duration-300 ease-in-out hover:scale-110" /></a>
+                            <a href="the-cliff-nepal"><img src="../assets/images/cliff-showcase.jpg" alt="" class="h-32 rounded-md duration-300 ease-in-out hover:scale-110" /></a>
                             <div>
-                                <a href="https://amooma.hk/" class="inline-flex mb-2 items-center rounded-full uppercase tracking-widest text-dark hover:text-primary"><i class="las la-arrow-right mr-2 rotate-[135deg] text-xl md:text-3xl"></i> Previous </a>
-                                <a href="#" class="hover:text-primary"><h3 class="mb-1 text-2xl md:text-3xl">The Cliff Nepal</h3></a>
-                                <a href="#" class="hover:text-primary uppercase"><p>UI/UX/WEB DESIGN • 2023</p></a>
+                                <a href="the-cliff-nepal" class="mb-2 inline-flex items-center rounded-full uppercase tracking-widest text-dark hover:text-primary"><i class="las la-arrow-right mr-2 rotate-[135deg] text-xl md:text-3xl"></i> Previous </a>
+                                <a href="the-cliff-nepal" class="hover:text-primary"><h3 class="mb-1 text-2xl md:text-3xl">The Cliff Nepal</h3></a>
+                                <a href="the-cliff-nepal" class="uppercase hover:text-primary"><p>UI/UX/WEB DESIGN • 2023</p></a>
                             </div>
                         </div>
                         <div class="text-right">
                             <div class="flex items-center justify-end gap-x-5 lg:gap-x-8">
                                 <div>
-                                    <a href="https://amooma.hk/" class="inline-flex mb-2 items-center rounded-full uppercase tracking-widest text-dark hover:text-primary" target="_blank">Next Up <i class="las la-arrow-right ml-2 -rotate-45 text-xl md:text-3xl"></i></a>
+                                    <a href="#" class="mb-2 inline-flex items-center rounded-full uppercase tracking-widest text-dark hover:text-primary">Next Up <i class="las la-arrow-right ml-2 -rotate-45 text-xl md:text-3xl"></i></a>
                                     <a href="#" class="hover:text-primary"><h3 class="mb-1 text-2xl md:text-3xl">Insellerate</h3></a>
-                                    <a href="#" class="hover:text-primary uppercase"><p>Mobile App Design • 2018</p></a>
+                                    <a href="#" class="uppercase hover:text-primary"><p>Mobile App Design • 2018</p></a>
                                 </div>
                                 <a href="#"><img src="../assets/images/insellerate.png" alt="" class="h-32 rounded-md bg-blue-100 duration-300 ease-in-out hover:scale-110" /></a>
                             </div>
